@@ -248,3 +248,4 @@ $fa-marked:      "\f005";
 // $fa-metadata:    "\f067";
 $fa-metadata:    "\f055";
 $fa-to-query:    "\f102";
+$fa-cut:         "\f0c4";
