@@ -2,7 +2,7 @@
   "name": "Kalamar",
   "description": "Mojolicious-based Frontend for KorAP",
   "license" : "BSD-2-Clause",
-  "version": "0.27.0",
+  "version": "0.27.1",
   "repository" : {
     "type": "git",
     "url": "https://github.com/KorAP/Kalamar.git"
