@@ -1,6 +1,7 @@
 0.27 2018-05-23
         - Introduced content blocks to create
           flexible entry lists in the footer
+        - Add marker for "cutted" matches.
 
 0.26 2018-04-06
         - Added meta data view.
